Elements stretch correction

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 .App {
-    min-width: 100vw;
+    max-width: 100vw;
     min-height: 100vh;
     background: rgb(241, 241, 241);
     display: grid;
     grid-template-rows: 60px 1fr;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 15px;
 }
 
